# DASN

./: .gitignore  README.md
dasn_ws/src/dasn_bringup/: package.xml  setup.cfg  setup.py
dasn_ws/src/dasn_bringup/config/: authorized_tags.yaml  bot_params.yaml  demo_endpoints.yaml  environment_map.yaml  nav2_params.yaml  security_controller.yaml  threat_weights.yaml  zones.yaml
dasn_ws/src/dasn_bringup/launch/: bot_only.launch.py  dasn_full.launch.py  (+1 more)
dasn_ws/src/dasn_dashboard/: package.xml  setup.cfg  setup.py
dasn_ws/src/dasn_description/: package.xml  setup.cfg  setup.py
dasn_ws/src/dasn_msgs/: CMakeLists.txt  package.xml
dasn_ws/src/dasn_msgs/msg/: AlarmEvent.msg  AudioChunk.msg  AuthEvent.msg  BotStatus.msg  DepthGrid.msg  DispatchCommand.msg  EncoderTicks.msg  FaceDetection.msg  FaceIdentity.msg  GasEvent.msg  PoseAnalysis.msg  SoundEvent.msg  StallEvent.msg  ThreatLevel.msg  ZoneSensorData.msg
dasn_ws/src/dasn_navigation/: package.xml  setup.cfg  setup.py
dasn_ws/src/dasn_perception/: package.xml  setup.cfg  setup.py
dasn_ws/src/dasn_perception/dasn_perception/: espcam_node.py  face_detector_node.py  face_recognizer_node.py  gas_analyzer_node.py  object_detector_node.py  phone_camera_node.py  pose_analyzer_node.py  rtsp_camera_node.py  sound_classifier_node.py
dasn_ws/src/dasn_perception/models/: README.md
dasn_ws/src/dasn_sentinel/: package.xml  setup.cfg  setup.py
dasn_ws/src/dasn_sentinel/dasn_sentinel/: auth_manager_node.py  gateway_receiver_node.py  security_controller_node.py  wifi_receiver_node.py
dasn_ws/src/dasn_threat/: package.xml  setup.cfg  setup.py
docs/: PRESENTATION_SETUP.md
firmware/gateway/: gateway.ino
firmware/mobile_unit_aiduino/: mobile_unit_aiduino.ino
firmware/mobile_unit_esp32/: mobile_unit_esp32.ino
firmware/sensor_test/: README.md  sensor_test.ino
firmware/sensor_test/mobile_unit_aiduino_motor_test/: mobile_unit_aiduino_motor_test.ino
firmware/sensor_test/mobile_unit_esp32_imu_encoder_calibration/: mobile_unit_esp32_imu_encoder_calibration.ino
firmware/sensor_test/mobile_unit_esp32_motor_encoder_test/: mobile_unit_esp32_motor_encoder_test.ino
firmware/sensor_test/mobile_unit_esp32_sensor_test/: mobile_unit_esp32_sensor_test.ino
firmware/sensor_test/sentinel_type_a_pivot_test/: config.h  sentinel_type_a_pivot_test.ino
firmware/sentinel_type_a/: config.h  espnow_protocol.h  sentinel_type_a.ino
firmware/sentinel_type_b/: sentinel_type_b.ino
firmware/sentinel_type_c/: sentinel_type_c.ino
firmware/shared/: config.h  espnow_protocol.h
(+13 files in other folders)
