<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dasn_sentinel</name>
  <version>0.1.0</version>
  <description>DASN Sentinel node communication package</description>
  <maintainer email="dasn@todo.todo">dasn</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>dasn_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
